--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<meta name="description" content=""/>
 	<meta name="keywords" content=""/>
-	<link href='http://fonts.googleapis.com/css?family=Lato:400,700,900|Open+Sans:400italic,400,300,800,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:400,700,900|Open+Sans:400italic,400,300,800,700'
+		  rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/reset.css"/>
 	<link rel="stylesheet" href="css/style.css"/>
 	<link rel="stylesheet" href="css/layout.css"/>
@@ -20,6 +21,7 @@
 <body>
 <header class="cf">
 	<a class="logo" href="#"></a>
+
 	<div class="search"></div>
 	<nav>
 		<ul class="menu">
@@ -43,38 +45,80 @@
 <section class="natural-stone">
 	<div class="container">
 		<a class="click-button" href="#">Click Here</a>
+
 		<div class="question">How do you create a product that looks like natural stone?</div>
 	</div>
 </section>
 <section class="expectetion">
 	<div class="container">
 		<h3 class="main-label">What You Can <b>Expect</b></h3>
-		<p class="description">Our Company has blended years of experience and craftsmanship to provide a unique combination of natural beauty and durable products. We have carefully selected each stone master to yield true replicate, real life textures that only mother earth could supply. </p>
+
+		<p class="description">Our Company has blended years of experience and craftsmanship to provide a unique
+			combination of natural beauty and durable products. We have carefully selected each stone master to yield
+			true replicate, real life textures that only mother earth could supply. </p>
+
 		<div class="ba-grid">
-			<div class="ba-width-1-4"><a href=""><img src="" alt=""/></a><a class="mat-name" href=""></a>
+			<div class="ba-width-medium-1-4 ba-width-small-1-2">
+				<a href="#"><img src="img/volupt.jpg" alt="volupt"/></a>
+				<a class="mat-name" href="#">Volupt</a>
 
-				<p class="sub-caption"></p>
+				<p class="sub-caption">Sed ut perspiciatis</p>
 
-				<p class="excrept"></p>
-				<a class="more-button" href=""></a></div>
-			<div class="ba-width-1-4"><a href=""><img src="" alt=""/></a><a class="mat-name" href=""></a>
+				<p class="excrept">Sed ut perspiciatis undomnis iste natus error sit voluptaccusantium doloremque
+					laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
+				<a class="more-button" href="#">Learn more</a></div>
+			<div class="ba-width-medium-1-4 ba-width-small-1-2">
+				<a href="#"><img src="img/santium.jpg" alt="santium"/></a>
+				<a class="mat-name" href="#">Santium</a>
 
-				<p class="sub-caption"></p>
+				<p class="sub-caption">Omnis iste natus</p>
 
-				<p class="excrept"></p>
-				<a class="more-button" href=""></a></div>
-			<div class="ba-width-1-4"><a href=""><img src="" alt=""/></a><a class="mat-name" href=""></a>
+				<p class="excrept">Sed ut perspiciatis undomnis iste natus error sit voluptaccusantium doloremque
+					laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
+				<a class="more-button" href="#">Learn more</a></div>
+			<div class="ba-width-medium-1-4 ba-width-small-1-2">
+				<a href="#"><img src="img/laudanti.jpg" alt="laudanti"/></a>
+				<a class="mat-name" href="#">Laudanti</a>
 
-				<p class="sub-caption"></p>
+				<p class="sub-caption">Voluptatem accusant</p>
 
-				<p class="excrept"></p>
-				<a class="more-button" href=""></a></div>
-			<div class="ba-width-1-4"><a href=""><img src="" alt=""/></a><a class="mat-name" href=""></a>
+				<p class="excrept">Sed ut perspiciatis undomnis iste natus error sit voluptaccusantium doloremque
+					laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
+				<a class="more-button" href="#">Learn more</a></div>
+			<div class="ba-width-medium-1-4 ba-width-small-1-2">
+				<a href="#"><img src="img/aperiam.jpg" alt="aperiam"/></a>
+				<a class="mat-name" href="#">Aperiam</a>
 
-				<p class="sub-caption"></p>
+				<p class="sub-caption">Inventore veritatis et</p>
 
-				<p class="excrept"></p>
-				<a class="more-button" href=""></a></div>
+				<p class="excrept">Sed ut perspiciatis undomnis iste natus error sit voluptaccusantium doloremque
+					laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
+				<a class="more-button" href="#">Learn more</a></div>
+		</div>
+	</div>
+</section>
+<section class="video">
+	<div class="container">
+		<div class="ba-grid">
+			<div class="ba-width-1-2">
+				<h3 class="main-label">We accept any <b>creative task</b></h3>
+			</div>
+			<div class="ba-width-1-2">
+				<div class="ba-grid">
+					<div class="ba-width-1-3">
+						<a href="#"><img src="" alt=""/></a>
+						<a href="#"><img src="" alt=""/></a>
+						<a href="#"><img src="" alt=""/></a>
+					</div>
+					<div class="ba-width-2-3">
+						<h3 class="small-label"></h3>
+
+						<p class="sub-label"></p>
+
+						<p class="big-excrept"></p>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </section>
