almost finished, except map

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<meta name="description" content=""/>
 	<meta name="keywords" content=""/>
-	<link href='http://fonts.googleapis.com/css?family=Lato:400,700,900|Open+Sans:400italic,400,300,800,700'
-		  rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:400,700,900|Open+Sans:400italic,400,300,800,700' rel='stylesheet' type='text/css'>
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css"/>
-	<link rel="stylesheet" href="css/style.css"/>
 	<link rel="stylesheet" href="css/layout.css"/>
+	<link rel="stylesheet" href="css/style.css"/>
 	<link rel="shortcut icon" href="favicon.ico"/>
 	<!--[if lt IE 9]>
 	<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
@@ -59,8 +59,8 @@
 
 		<div class="ba-grid">
 			<div class="ba-width-medium-1-4 ba-width-small-1-2">
-				<a href="#"><img src="img/volupt.jpg" alt="volupt"/></a>
-				<a class="mat-name" href="#">Volupt</a>
+				<a href="#"><img src="img/volupt.jpg" alt="volupt" width="100%"/></a>
+				<a class="title" href="#">Volupt</a>
 
 				<p class="sub-caption">Sed ut perspiciatis</p>
 
@@ -68,8 +68,8 @@
 					laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
 				<a class="more-button" href="#">Learn more</a></div>
 			<div class="ba-width-medium-1-4 ba-width-small-1-2">
-				<a href="#"><img src="img/santium.jpg" alt="santium"/></a>
-				<a class="mat-name" href="#">Santium</a>
+				<a href="#"><img src="img/santium.jpg" alt="santium" width="100%"/></a>
+				<a class="title" href="#">Santium</a>
 
 				<p class="sub-caption">Omnis iste natus</p>
 
@@ -77,8 +77,8 @@
 					laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
 				<a class="more-button" href="#">Learn more</a></div>
 			<div class="ba-width-medium-1-4 ba-width-small-1-2">
-				<a href="#"><img src="img/laudanti.jpg" alt="laudanti"/></a>
-				<a class="mat-name" href="#">Laudanti</a>
+				<a href="#"><img src="img/laudanti.jpg" alt="laudanti" width="100%"/></a>
+				<a class="title" href="#">Laudanti</a>
 
 				<p class="sub-caption">Voluptatem accusant</p>
 
@@ -86,8 +86,8 @@
 					laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
 				<a class="more-button" href="#">Learn more</a></div>
 			<div class="ba-width-medium-1-4 ba-width-small-1-2">
-				<a href="#"><img src="img/aperiam.jpg" alt="aperiam"/></a>
-				<a class="mat-name" href="#">Aperiam</a>
+				<a href="#"><img src="img/aperiam.jpg" alt="aperiam" width="100%"/></a>
+				<a class="title" href="#">Aperiam</a>
 
 				<p class="sub-caption">Inventore veritatis et</p>
 
@@ -99,28 +99,294 @@
 </section>
 <section class="video">
 	<div class="container">
+		<h3 class="main-label">We accept any<br/><b>creative task</b></h3>
+
 		<div class="ba-grid">
+
 			<div class="ba-width-1-2">
-				<h3 class="main-label">We accept any <b>creative task</b></h3>
+
+				<div class="embeded-video">
+					<iframe src="//player.vimeo.com/video/112351848" webkitallowfullscreen mozallowfullscreen
+							allowfullscreen></iframe>
+				</div>
 			</div>
 			<div class="ba-width-1-2">
 				<div class="ba-grid">
 					<div class="ba-width-1-3">
-						<a href="#"><img src="" alt=""/></a>
-						<a href="#"><img src="" alt=""/></a>
-						<a href="#"><img src="" alt=""/></a>
+						<a class="rocks-sample" href="#"><img src="img/rocks1.jpg" alt="rocks example"
+															  width="100%"/></a>
+						<a class="rocks-sample" href="#"><img src="img/rocks2.jpg" alt="rocks example"
+															  width="100%"/></a>
+						<a class="rocks-sample
+						" href="#"><img src="img/rocks3.jpg" alt="rocks example" width="100%"/></a>
 					</div>
 					<div class="ba-width-2-3">
-						<h3 class="small-label"></h3>
+						<h3 class="small-label">No job is too <b>big or small!</b></h3>
 
-						<p class="sub-label"></p>
+						<p class="sub-caption">Sed ut perspiciatis</p>
 
-						<p class="big-excrept"></p>
+						<p class="big-excrept">Quisque nulla. Vestibum libero nisl, porta vel, scelerisque eget,
+							malesuada at, neque. Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean
+							nec eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+							Curae; Suspendisse sollicitudin.</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
+<section class="offer">
+	<div class="container">
+		<h3 class="main-label">Take a look<br/>at the services <b>we offer</b></h3>
+
+		<div class="ba-grid">
+			<div class="rocks-list ba-width-1-2">
+				<div class="rock-item">
+					<img src="img/quisque.jpg" alt="quisque"/>
+
+					<div class="rock-name">Quisque<br/>nulla</div>
+				</div>
+				<div class="rock-item">
+					<img src="img/vestibulum.jpg" alt="vestibulum"/>
+
+					<div class="rock-name">Vestibulum<br/>libero</div>
+				</div>
+				<div class="rock-item">
+					<img src="img/celerisque.jpg" alt="celerisque"/>
+
+					<div class="rock-name">Сelerisque<br/>eget</div>
+				</div>
+				<div class="rock-item">
+					<img src="img/alesuada.jpg" alt="alesuada"/>
+
+					<div class="rock-name">Alesuada<br/>neque</div>
+				</div>
+				<div class="rock-item">
+					<img src="img/vivamus.jpg" alt="vivamus"/>
+
+					<div class="rock-name">Vivamus<br/>eget</div>
+				</div>
+			</div>
+			<div class="ba-width-1-2">
+				<div class="sub-caption">Vestibulum libero nisl, porta vel</div>
+				<div class="big-excrept">Quisque nulla. Vestibulum libero nisl, a vel, scelerisque eget, malesuada at,
+					neque. Vivamus eget nibh. Etiam cursleo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante
+					ipsum primis i faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse sollicitudin
+					velit sed leo. Ut pharetra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt.
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+<section class="customers">
+	<div class="container">
+		<h3 class="main-label">What our <b>customers</b> say</h3>
+
+		<div class="ba-grid">
+			<div class="ba-width-1-3 reply">
+				<blockquote>
+					<div class="sub-caption customer-name">Paul Moreno</div>
+					<p>Quisque nulla. Vestibulum libero nisl, a vel, scelerisque eget, malesuada at, neque. Vivamus eget
+						nibh. Etiam cursleo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis i
+						faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse sollicitudin.</p>
+
+					<div class="ba-border-circle photo-1"><img src="img/photo1.png" alt=""/></div>
+
+				</blockquote>
+			</div>
+			<div class="ba-width-1-3 reply">
+				<blockquote>
+					<div class="sub-caption customer-name">Sara Golden</div>
+					<p>Quisque nulla. Vestibulum libero nisl, a vel, scelerisque eget, malesuada at, neque. Vivamus eget
+						nibh. Etiam cursleo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis i
+						faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse sollicitudin.</p>
+
+					<div class="ba-border-circle photo-2"><img src="img/photo2.png" alt=""/></div>
+
+				</blockquote>
+			</div>
+			<div class="ba-width-1-3 reply">
+				<blockquote>
+					<div class="sub-caption customer-name">Robert Smith</div>
+					<p>Quisque nulla. Vestibulum libero nisl, a vel, scelerisque eget, malesuada at, neque. Vivamus eget
+						nibh. Etiam cursleo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis i
+						faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse sollicitudin.</p>
+
+					<div class="ba-border-circle photo-3"><img src="img/photo3.png" alt=""/></div>
+				</blockquote>
+			</div>
+		</div>
+		<div class="controls"></div>
+	</div>
+</section>
+<section class="gallery">
+	<div class="container">
+		<h3 class="main-label">Latest works <b>gallery</b></h3>
+
+		<div class="ba-grid">
+			<div class="ba-width-3-4">
+				<div class="ba-grid">
+					<div class="ba-width-1-3">
+						<a class="work" href="#"><img src="img/sink.jpg" alt="sink" width="100%"/></a>
+						<a class="work" href="#"><img src="img/stones.jpg" alt="stones" width="100%"/></a>
+					</div>
+					<div class="ba-width-1-3">
+						<a class="work" href="#"><img src="img/bathroom.jpg" alt="bathroom" width="100%"/></a>
+						<a class="work" href="#"><img src="img/toilet.jpg" alt="toilet" width="100%"/></a>
+					</div>
+					<div class="ba-width-1-3">
+						<a class="work" href="#"><img src="img/bricks.jpg" alt="bricks" width="100%"/></a>
+						<a class="work" href="#"><img src="img/square-bricks.jpg" alt="square-bricks" width="100%"/></a>
+					</div>
+				</div>
+				<div class="portfolio-controls"><a href="#" class="ba-border-circle"></a><a href="#"
+																							class="ba-border-circle"></a><a
+						href="#" class="ba-border-circle active"></a></div>
+			</div>
+			<div class="ba-width-1-4 news">
+				<div class="title">News</div>
+				<article>
+					<div class="sub-caption">9/12/2013</div>
+					<p>Sed ut perspiciatis undomnis iste natus error sit voluptaccusantium doloremque laudantium, totam
+						rem aperiam, eaque ipsa quae ab illo inventore.</p>
+					<a class="small-more" href="#">Learn more</a>
+				</article>
+
+				<article>
+					<div class="sub-caption">9/12/2013</div>
+					<p>Sed ut perspiciatis undomnis iste natus error sit voluptaccusantium doloremque laudantium, totam
+						rem aperiam, eaque ipsa quae ab illo inventore.</p>
+					<a class="small-more" href="#">Learn more</a>
+				</article>
+			</div>
+		</div>
+	</div>
+</section>
+<section class="progress-bars">
+	<div class="container">
+		<div class="ba-grid">
+			<div class="ba-width-1-2 spoilers">
+				<input id="first" type="radio" name="spoiler" checked/>
+
+				<div class="spoiler">
+					<label class="spoiler-title" for="first">Quisque nulla. Vestibulum libero</label>
+
+					<p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
+						at,
+						neque. Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.
+						Vestibulum
+						ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse
+						sollicitudin velit sedra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt ac.</p>
+				</div>
+				<input id="second" type="radio" name="spoiler"/>
+
+				<div class="spoiler open">
+					<label class="spoiler-title" for="second">Sed ut perspiciatis undomnis iste</label>
+
+					<p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
+						at,
+						neque. Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.
+						Vestibulum
+						ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse
+						sollicitudin velit sedra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt ac.</p>
+				</div>
+				<input id="third" type="radio" name="spoiler"/>
+
+				<div class="spoiler">
+					<label class="spoiler-title" for="third">Quisque nulla. Vestibulum libero nisl, porta vel,
+						scelerisque ege</label>
+
+					<p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
+						at,
+						neque. Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.
+						Vestibulum
+						ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse
+						sollicitudin velit sedra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt ac.</p>
+				</div>
+				<input id="fourth" type="radio" name="spoiler"/>
+
+				<div class="spoiler">
+					<label class="spoiler-title" for="fourth">Vestibulum libero nisl, porta vel, scelerisque eget,
+						malesuada at, neque.</label>
+
+					<p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
+						at,
+						neque. Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.
+						Vestibulum
+						ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse
+						sollicitudin velit sedra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt ac.</p>
+				</div>
+				<input id="fifth" type="radio" name="spoiler"/>
+
+				<div class="spoiler">
+					<label class="spoiler-title" for="fifth">Vivamus eget nibh. Etiam cursus leo vel metus. Nulla
+						facilisi.</label>
+
+					<p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
+						at,
+						neque. Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.
+						Vestibulum
+						ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse
+						sollicitudin velit sedra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt ac.</p>
+				</div>
+				<input id="sixth" type="radio" name="spoiler"/>
+
+				<div class="spoiler">
+					<label class="spoiler-title" for="sixth">Vestibulum libero nisl, porta vel, scelerisque</label>
+
+					<p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
+						at,
+						neque. Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.
+						Vestibulum
+						ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse
+						sollicitudin velit sedra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt ac.</p>
+				</div>
+			</div>
+			<div class="ba-width-1-2">
+				<div class="bar cf red">
+					<div class="color">Quisque nulla</div>
+					<div class="percent">95%</div>
+				</div>
+				<div class="bar cf blue">
+					<div class="color">Vestibulum libero</div>
+					<div class="percent">80%</div>
+				</div>
+				<div class="bar cf green">
+					<div class="color">nisl porta vel</div>
+					<div class="percent">64%</div>
+				</div>
+				<div class="bar cf orange">
+					<div class="color">scelerisque eget</div>
+					<div class="percent">79%</div>
+				</div>
+				<h4 class="header-4th">Vestibulum iaculis lacinia?</h4>
+				<p class="large-excerpt">Proin dictum elementum veliteuismod conseq.</p>
+				<a class="more-button" href="#">View more</a>
+			</div>
+		</div>
+	</div>
+</section>
+<section class="service">
+	<div class="container cf">
+		<h3 class="medium-label ba-vertical-align-middle">Cities we service</h3>
+		<p class="phone ba-vertical-align-middle">call now +1 959 603 6035</p>
+	</div>
+</section>
+<section class="contact-us">
+	<div class="container">
+		<h3 class="main-label">Feel free to <b>contact us</b></h3>
+		<div class="socials"><a href="#" class="google-plus ba-border-circle"></a><a href="#" class="twitter ba-border-circle"></a><a href="#" class="facebook ba-border-circle"></a><a href="#" class="pinterest ba-border-circle"></a><a href="#" class="linkedin ba-border-circle"></a></div>
+		<form action="#">
+			<div class="ba-grid"><div class="ba-width-1-2"><input class="f-name" type="text" placeholder="First Name"/></div>
+			<div class="ba-width-1-2"><input class="l-name" type="text" placeholder="Last Name"/></div></div>
+			<textarea class="msg" placeholder="Message"></textarea>
+			<button class="send" type="submit">Send your message</button>
+		</form>
+	</div>
+</section>
+<section class="copyright">
+	<p>Designed by <a href="http://templatemonster.com" class="site">Template<span class="red-word">Monster</span>.com</a> © 2015</p>
+</section>
+<section class="map"></section>
 </body>
 </html>
