--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 	<a class="logo" href="#"></a>
 
 	<div class="search"></div>
-	<nav>
-		<ul class="menu">
+	<nav class="menu">
+		<ul>
 			<li><a href="#">Home</a></li>
 			<li><a href="#">About</a></li>
 			<li><a href="#">Solutions</a></li>
@@ -36,10 +36,11 @@
 	</nav>
 </header>
 <section class="slider">
-	<div class="container">
-		<h2>Beautify your home with handcrafted stone</h2>
-		<a class="prev" href="#"></a>
-		<a class="next" href="#"></a>
+		<div class="slide1" style="background: url('img/slide1.jpg')"><div class="container"><h2>Beautify your home with handcrafted stone</h2></div></div>
+		<div class="slide2" style="background: url('img/slide2.jpg'); display:none"><div class="container"><h2>We love Your design ideas in stone</h2></div></div>
+		<div class="slide3" style="background: url('img/slide3.jpg'); display:none"><div class="container"><h2>The look and feel of our products are naturally superior</h2></div></div>
+		<div class="container"><a class="prev" href="#"></a>
+		<a class="next" href="#"></a></div>
 	</div>
 </section>
 <section class="natural-stone">
