--- a/index.html
+++ b/index.html
@@ -31,34 +31,36 @@
 			<span class="big">Strongest</span>
 		</span>
 	</a>
-
+	<i class="fa fa-search search-icon"></i>
 	<div class="menu-toggle"><i class="fa fa-bars"></i></div>
-	<div class="search">
-		<div class="form-wrap"><form method="post" class="search-form">
-			<input class="search-field" type="text" placeholder="Search..."/>
-		</form></div>
-		<button class="search-button"><i class="fa fa-search"></i></button>
-		<i class="fa fa-search search-icon"></i>
-	</div>
-	<nav class="menu">
-		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Solutions</a></li>
-			<li><a href="#">Services</a></li>
-			<li><a href="#">Testimonial</a></li>
-			<li><a href="#">Gallery</a></li>
-			<li><a href="#">Contacts</a></li>
-		</ul>
-	</nav>
+	<div class="search cf">
+			<form method="post" class="search-form">
+				<div class="form-wrap">
+					<input class="search-field" type="text" placeholder="Search..."/>
+				</div>
+				<button class="search-button"><i class="fa fa-search"></i></button>
+
+			</form>
+		</div>
+		<nav class="menu">
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Solutions</a></li>
+				<li><a href="#">Services</a></li>
+				<li><a href="#">Testimonial</a></li>
+				<li><a href="#">Gallery</a></li>
+				<li><a href="#">Contacts</a></li>
+			</ul>
+		</nav>
 </header>
 <section class="top-slider">
 	<div class="content-slider cycle-slideshow"
-		data-cycle-fx="scrollHorz"
-		data-cycle-timeout="5000"
-		data-cycle-slides="> div"
-		data-cycle-prev=".prev"
-		data-cycle-next=".next"
+		 data-cycle-fx="scrollHorz"
+		 data-cycle-timeout="5000"
+		 data-cycle-slides="> div"
+		 data-cycle-prev=".prev"
+		 data-cycle-next=".next"
 			>
 		<div class="slide slide1" style="background-image: url('img/slide1.jpg')">
 			<div class="container">
@@ -311,76 +313,76 @@
 				<div class="spoiler">
 					<label class="spoiler-title" for="first">Quisque nulla. Vestibulum libero</label>
 
-					<p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
+					<div class="spoiler-content"><p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
 						at,
 						neque. Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.
 						Vestibulum
 						ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse
-						sollicitudin velit sedra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt ac.</p>
+						sollicitudin velit sedra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt ac.</p></div>
 				</div>
 				<input id="second" type="radio" name="spoiler"/>
 
 				<div class="spoiler open">
 					<label class="spoiler-title" for="second">Sed ut perspiciatis undomnis iste</label>
 
-					<p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
+					<div class="spoiler-content"><p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
 						at,
 						neque. Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.
 						Vestibulum
 						ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse
 						sollicitudin velit sedra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt ac.</p>
-				</div>
+				</div></div>
 				<input id="third" type="radio" name="spoiler"/>
 
 				<div class="spoiler">
 					<label class="spoiler-title" for="third">Quisque nulla. Vestibulum libero nisl, porta vel,
 						scelerisque ege</label>
 
-					<p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
+					<div class="spoiler-content"><p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
 						at,
 						neque. Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.
 						Vestibulum
 						ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse
 						sollicitudin velit sedra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt ac.</p>
-				</div>
+				</div></div>
 				<input id="fourth" type="radio" name="spoiler"/>
 
 				<div class="spoiler">
 					<label class="spoiler-title" for="fourth">Vestibulum libero nisl, porta vel, scelerisque eget,
 						malesuada at, neque.</label>
 
-					<p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
+					<div class="spoiler-content"><p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
 						at,
 						neque. Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.
 						Vestibulum
 						ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse
 						sollicitudin velit sedra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt ac.</p>
-				</div>
+				</div></div>
 				<input id="fifth" type="radio" name="spoiler"/>
 
 				<div class="spoiler">
 					<label class="spoiler-title" for="fifth">Vivamus eget nibh. Etiam cursus leo vel metus. Nulla
 						facilisi.</label>
 
-					<p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
+					<div class="spoiler-content"><p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
 						at,
 						neque. Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.
 						Vestibulum
 						ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse
 						sollicitudin velit sedra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt ac.</p>
-				</div>
+				</div></div>
 				<input id="sixth" type="radio" name="spoiler"/>
 
 				<div class="spoiler">
 					<label class="spoiler-title" for="sixth">Vestibulum libero nisl, porta vel, scelerisque</label>
 
-					<p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
+					<div class="spoiler-content"><p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
 						at,
 						neque. Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.
 						Vestibulum
 						ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse
 						sollicitudin velit sedra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt ac.</p>
-				</div>
+				</div></div>
 			</div>
 			<div class="ba-width-1-2">
 				<div class="bar cf red">
@@ -440,7 +442,8 @@
 			class="red-word">Monster</span>.com</a> © 2015</p>
 </section>
 <section class="map">
-	<iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zwVc-MfqXC48.kYYk6PxYquec" width="100%" height="500"></iframe>
+	<iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zwVc-MfqXC48.kYYk6PxYquec" width="100%"
+			height="500"></iframe>
 </section>
 </body>
 </html>
