--- a/index.html
+++ b/index.html
@@ -32,27 +32,40 @@
 		</span>
 	</a>
 	<i class="fa fa-search search-icon"></i>
+
 	<div class="menu-toggle"><i class="fa fa-bars"></i></div>
 	<div class="search cf">
-			<form method="post" class="search-form">
-				<div class="form-wrap">
-					<input class="search-field" type="text" placeholder="Search..."/>
-				</div>
-				<button class="search-button"><i class="fa fa-search"></i></button>
+		<form method="post" class="search-form">
+			<div class="form-wrap">
+				<input class="search-field" type="text" placeholder="Search..."/>
+			</div>
+			<button class="search-button"><i class="fa fa-search"></i></button>
 
-			</form>
-		</div>
-		<nav class="menu">
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Solutions</a></li>
-				<li><a href="#">Services</a></li>
-				<li><a href="#">Testimonial</a></li>
-				<li><a href="#">Gallery</a></li>
-				<li><a href="#">Contacts</a></li>
-			</ul>
-		</nav>
+		</form>
+	</div>
+	<nav class="menu">
+		<ul class="cf">
+			<li><a href="#">Home</a>
+
+				<div class="wrap-menu">
+					<ul class="sub-menu">
+						<li><a href="#">Quisque nulla</a></li>
+						<li><a href="#">Vestibulum libero nis</a></li>
+						<li class="sub-vert-menu"><a href="#">Porta vel scelerisque eget</a></li>
+						<li><a href="#">Malesuada at neque</a></li>
+						<li><a href="#">Vivamus eget nibh</a></li>
+					</ul>
+				</div>
+			</li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Solutions</a></li>
+			<li><a href="#">Services</a></li>
+			<li><a href="#">Testimonial</a></li>
+			<li><a href="#">Gallery</a></li>
+			<li><a href="#">Contacts</a></li>
+		</ul>
+	</nav>
+
 </header>
 <section class="top-slider">
 	<div class="content-slider cycle-slideshow"
@@ -85,10 +98,9 @@
 
 </section>
 <section class="natural-stone">
-	<div class="container">
-		<a class="click-button" href="#">Click Here</a>
-
+	<div class="container cf">
 		<div class="question">How do you create a product that looks like natural stone?</div>
+		<a class="click-button" href="#">Click Here</a>
 	</div>
 </section>
 <section class="expectetion">
@@ -145,24 +157,21 @@
 
 		<div class="ba-grid">
 
-			<div class="ba-width-1-2">
+			<div class="ba-width-medium-1-2 ba-width-small-1-1">
 
 				<div class="embeded-video">
 					<iframe src="//player.vimeo.com/video/112351848" webkitallowfullscreen mozallowfullscreen
 							allowfullscreen></iframe>
 				</div>
 			</div>
-			<div class="ba-width-1-2">
+			<div class="ba-width-medium-1-2 ba-width-small-1-1">
 				<div class="ba-grid">
-					<div class="ba-width-1-3">
-						<a class="rocks-sample" href="#"><img src="img/rocks1.jpg" alt="rocks example"
-															  width="100%"/></a>
-						<a class="rocks-sample" href="#"><img src="img/rocks2.jpg" alt="rocks example"
-															  width="100%"/></a>
-						<a class="rocks-sample
-						" href="#"><img src="img/rocks3.jpg" alt="rocks example" width="100%"/></a>
+					<div class="rocks-sample-list ba-width-large-1-3 ba-width-small-1-1">
+						<a class="rocks-sample" href="#"><img src="img/rocks1.jpg" alt="rocks example"/></a>
+						<a class="rocks-sample" href="#"><img src="img/rocks2.jpg" alt="rocks example"/></a>
+						<a class="rocks-sample" href="#"><img src="img/rocks3.jpg" alt="rocks example"/></a>
 					</div>
-					<div class="ba-width-2-3">
+					<div class="ba-width-large-2-3 ba-width-small-1-1">
 						<h3 class="small-label">No job is too <b>big or small!</b></h3>
 
 						<p class="sub-caption">Sed ut perspiciatis</p>
@@ -182,7 +191,7 @@
 		<h3 class="main-label">Take a look<br/>at the services <b>we offer</b></h3>
 
 		<div class="ba-grid">
-			<div class="rocks-list ba-width-1-2">
+			<div class="rocks-list ba-width-medium-1-2 ba-width-small-1-1">
 				<div class="rock-item">
 					<img src="img/quisque.jpg" alt="quisque"/>
 
@@ -209,7 +218,7 @@
 					<div class="rock-name">Vivamus<br/>eget</div>
 				</div>
 			</div>
-			<div class="ba-width-1-2">
+			<div class="ba-width-medium-1-2 ba-width-small-1-1">
 				<div class="sub-caption">Vestibulum libero nisl, porta vel</div>
 				<div class="big-excrept">Quisque nulla. Vestibulum libero nisl, a vel, scelerisque eget, malesuada at,
 					neque. Vivamus eget nibh. Etiam cursleo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante
@@ -224,41 +233,58 @@
 	<div class="container">
 		<h3 class="main-label">What our <b>customers</b> say</h3>
 
-		<div class="ba-grid">
-			<div class="ba-width-1-3 reply">
-				<blockquote>
-					<div class="sub-caption customer-name">Paul Moreno</div>
-					<p>Quisque nulla. Vestibulum libero nisl, a vel, scelerisque eget, malesuada at, neque. Vivamus eget
-						nibh. Etiam cursleo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis i
-						faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse sollicitudin.</p>
+		<div class='cycle-slideshow'
+			 data-cycle-fx="scrollHorz"
+			 data-cycle-timeout="0"
+			 data-cycle-slides="> div"
+			 data-cycle-prev=".prev-reply"
+			 data-cycle-next=".next-reply">
+			<div class="ba-grid">
+				<div class="ba-width-medium-1-3 ba-width-small-1-1 reply">
+					<blockquote>
+						<div class="sub-caption customer-name">Paul Moreno</div>
+						<p>Quisque nulla. Vestibulum libero nisl, a vel, scelerisque eget, malesuada at, neque. Vivamus
+							eget
+							nibh. Etiam cursleo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis
+							i
+							faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse sollicitudin.</p>
 
-					<div class="ba-border-circle photo-1"><img src="img/photo1.png" alt=""/></div>
+						<div class="ba-border-circle photo-1"><img src="img/photo1.png" alt=""/></div>
 
-				</blockquote>
-			</div>
-			<div class="ba-width-1-3 reply">
-				<blockquote>
-					<div class="sub-caption customer-name">Sara Golden</div>
-					<p>Quisque nulla. Vestibulum libero nisl, a vel, scelerisque eget, malesuada at, neque. Vivamus eget
-						nibh. Etiam cursleo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis i
-						faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse sollicitudin.</p>
+					</blockquote>
+				</div>
+				<div class="ba-width-medium-1-3 ba-width-small-1-1 reply">
+					<blockquote>
+						<div class="sub-caption customer-name">Sara Golden</div>
+						<p>Quisque nulla. Vestibulum libero nisl, a vel, scelerisque eget, malesuada at, neque. Vivamus
+							eget
+							nibh. Etiam cursleo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis
+							i
+							faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse sollicitudin.</p>
 
-					<div class="ba-border-circle photo-2"><img src="img/photo2.png" alt=""/></div>
+						<div class="ba-border-circle photo-2"><img src="img/photo2.png" alt=""/></div>
 
-				</blockquote>
-			</div>
-			<div class="ba-width-1-3 reply">
-				<blockquote>
-					<div class="sub-caption customer-name">Robert Smith</div>
-					<p>Quisque nulla. Vestibulum libero nisl, a vel, scelerisque eget, malesuada at, neque. Vivamus eget
-						nibh. Etiam cursleo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis i
-						faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse sollicitudin.</p>
+					</blockquote>
+				</div>
+				<div class="ba-width-medium-1-3 ba-width-small-1-1 reply">
+					<blockquote>
+						<div class="sub-caption customer-name">Robert Smith</div>
+						<p>Quisque nulla. Vestibulum libero nisl, a vel, scelerisque eget, malesuada at, neque. Vivamus
+							eget
+							nibh. Etiam cursleo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis
+							i
+							faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse sollicitudin.</p>
 
-					<div class="ba-border-circle photo-3"><img src="img/photo3.png" alt=""/></div>
-				</blockquote>
+						<div class="ba-border-circle photo-3"><img src="img/photo3.png" alt=""/></div>
+					</blockquote>
+				</div>
 			</div>
 		</div>
-		<div class="controls"></div>
+
+	</div>
+	<div class="controls">
+		<a class="prev-reply" href="#"><i class="fa fa-angle-left"></i></a>
+		<a class="next-reply" href="#"><i class="fa fa-angle-right"></i></a>
 	</div>
 </section>
 <section class="gallery">
@@ -266,26 +292,49 @@
 		<h3 class="main-label">Latest works <b>gallery</b></h3>
 
 		<div class="ba-grid">
-			<div class="ba-width-3-4">
-				<div class="ba-grid">
-					<div class="ba-width-1-3">
-						<a class="work" href="#"><img src="img/sink.jpg" alt="sink" width="100%"/></a>
-						<a class="work" href="#"><img src="img/stones.jpg" alt="stones" width="100%"/></a>
+			<div class="portfolio ba-width-large-3-4 ba-width-medium-1-1 cycle-pager">
+				<div class="cycle-slideshow"
+					 data-cycle-fx=scrollHorz
+					 data-cycle-timeout="5000"
+					 data-cycle-slides="> div"
+					 data-cycle-pager=".portfolio-controls">
+					<div class="ba-grid">
+						<div class="ba-width-1-3">
+							<a class="work" href="#"><img src="img/sink.jpg" alt="sink" width="100%"/></a>
+							<a class="work" href="#"><img src="img/stones.jpg" alt="stones" width="100%"/></a>
+						</div>
+						<div class="ba-width-1-3">
+							<a class="work" href="#"><img src="img/bathroom.jpg" alt="bathroom" width="100%"/></a>
+							<a class="work" href="#"><img src="img/toilet.jpg" alt="toilet" width="100%"/></a>
+						</div>
+						<div class="ba-width-1-3">
+							<a class="work" href="#"><img src="img/bricks.jpg" alt="bricks" width="100%"/></a>
+							<a class="work" href="#"><img src="img/square-bricks.jpg" alt="square-bricks" width="100%"/></a>
+						</div>
 					</div>
-					<div class="ba-width-1-3">
-						<a class="work" href="#"><img src="img/bathroom.jpg" alt="bathroom" width="100%"/></a>
-						<a class="work" href="#"><img src="img/toilet.jpg" alt="toilet" width="100%"/></a>
-					</div>
-					<div class="ba-width-1-3">
-						<a class="work" href="#"><img src="img/bricks.jpg" alt="bricks" width="100%"/></a>
-						<a class="work" href="#"><img src="img/square-bricks.jpg" alt="square-bricks" width="100%"/></a>
+					<div class="ba-grid">
+
+						<div class="ba-width-1-3">
+							<a class="work" href="#"><img src="img/bathroom.jpg" alt="bathroom" width="100%"/></a>
+							<a class="work" href="#"><img src="img/toilet.jpg" alt="toilet" width="100%"/></a>
+						</div>
+						<div class="ba-width-1-3">
+							<a class="work" href="#"><img src="img/sink.jpg" alt="sink" width="100%"/></a>
+							<a class="work" href="#"><img src="img/stones.jpg" alt="stones" width="100%"/></a>
+						</div>
+						<div class="ba-width-1-3">
+							<a class="work" href="#"><img src="img/bricks.jpg" alt="bricks" width="100%"/></a>
+							<a class="work" href="#"><img src="img/square-bricks.jpg" alt="square-bricks" width="100%"/></a>
+						</div>
 					</div>
 				</div>
-				<div class="portfolio-controls"><a href="#" class="ba-border-circle"></a><a href="#"
-																							class="ba-border-circle"></a><a
-						href="#" class="ba-border-circle active"></a></div>
+				<div class="portfolio-controls">
+					<!--<a href="#" class="ba-border-circle"></a>-->
+					<!--<a href="#" class="ba-border-circle"></a>-->
+					<!--<a href="#" class="ba-border-circle active"></a>-->
+				</div>
 			</div>
-			<div class="ba-width-1-4 news">
+			<div class="ba-width-large-1-4 ba-width-medium-1-1 news">
 				<div class="title">News</div>
 				<article>
 					<div class="sub-caption">9/12/2013</div>
@@ -307,84 +356,96 @@
 <section class="progress-bars">
 	<div class="container">
 		<div class="ba-grid">
-			<div class="ba-width-1-2 spoilers">
+			<div class="ba-width-medium-1-2 ba-width-small-1-1 spoilers">
 				<input id="first" type="radio" name="spoiler" checked/>
 
 				<div class="spoiler">
 					<label class="spoiler-title" for="first">Quisque nulla. Vestibulum libero</label>
 
-					<div class="spoiler-content"><p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
+					<div class="spoiler-content"><p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael,
+						scelerisque eget, malesuada
 						at,
 						neque. Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.
 						Vestibulum
 						ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse
-						sollicitudin velit sedra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt ac.</p></div>
+						sollicitudin velit sedra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt ac.</p>
+					</div>
 				</div>
 				<input id="second" type="radio" name="spoiler"/>
 
 				<div class="spoiler open">
 					<label class="spoiler-title" for="second">Sed ut perspiciatis undomnis iste</label>
 
-					<div class="spoiler-content"><p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
+					<div class="spoiler-content"><p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael,
+						scelerisque eget, malesuada
 						at,
 						neque. Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.
 						Vestibulum
 						ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse
 						sollicitudin velit sedra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt ac.</p>
-				</div></div>
+					</div>
+				</div>
 				<input id="third" type="radio" name="spoiler"/>
 
 				<div class="spoiler">
 					<label class="spoiler-title" for="third">Quisque nulla. Vestibulum libero nisl, porta vel,
 						scelerisque ege</label>
 
-					<div class="spoiler-content"><p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
+					<div class="spoiler-content"><p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael,
+						scelerisque eget, malesuada
 						at,
 						neque. Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.
 						Vestibulum
 						ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse
 						sollicitudin velit sedra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt ac.</p>
-				</div></div>
+					</div>
+				</div>
 				<input id="fourth" type="radio" name="spoiler"/>
 
 				<div class="spoiler">
 					<label class="spoiler-title" for="fourth">Vestibulum libero nisl, porta vel, scelerisque eget,
 						malesuada at, neque.</label>
 
-					<div class="spoiler-content"><p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
+					<div class="spoiler-content"><p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael,
+						scelerisque eget, malesuada
 						at,
 						neque. Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.
 						Vestibulum
 						ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse
 						sollicitudin velit sedra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt ac.</p>
-				</div></div>
+					</div>
+				</div>
 				<input id="fifth" type="radio" name="spoiler"/>
 
 				<div class="spoiler">
 					<label class="spoiler-title" for="fifth">Vivamus eget nibh. Etiam cursus leo vel metus. Nulla
 						facilisi.</label>
 
-					<div class="spoiler-content"><p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
+					<div class="spoiler-content"><p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael,
+						scelerisque eget, malesuada
 						at,
 						neque. Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.
 						Vestibulum
 						ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse
 						sollicitudin velit sedra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt ac.</p>
-				</div></div>
+					</div>
+				</div>
 				<input id="sixth" type="radio" name="spoiler"/>
 
 				<div class="spoiler">
 					<label class="spoiler-title" for="sixth">Vestibulum libero nisl, porta vel, scelerisque</label>
 
-					<div class="spoiler-content"><p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael, scelerisque eget, malesuada
+					<div class="spoiler-content"><p class="spoiler-body">Quisque nulla. Vestibulum libero nisl, portael,
+						scelerisque eget, malesuada
 						at,
 						neque. Vivamus eget nibh. Etiam cursus leo vel metus. Nulla facilisi. Aenean nec eros.
 						Vestibulum
 						ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse
 						sollicitudin velit sedra augue nec augue. Nam elit magna, hendrerit sit amet, tincidunt ac.</p>
-				</div></div>
+					</div>
+				</div>
 			</div>
-			<div class="ba-width-1-2">
+			<div class="ba-width-medium-1-2 ba-width-small-1-1">
 				<div class="bar cf red">
 					<div class="color">Quisque nulla</div>
 					<div class="percent">95%</div>
@@ -429,8 +490,10 @@
 		</div>
 		<form action="#">
 			<div class="ba-grid">
-				<div class="ba-width-1-2"><input class="f-name" type="text" placeholder="First Name"/></div>
-				<div class="ba-width-1-2"><input class="l-name" type="text" placeholder="Last Name"/></div>
+				<div class="ba-width-medium-1-2 ba-width-small-1-1"><input class="f-name" type="text"
+																		   placeholder="First Name"/></div>
+				<div class="ba-width-medium-1-2 ba-width-small-1-1"><input class="l-name" type="text"
+																		   placeholder="Last Name"/></div>
 			</div>
 			<textarea class="msg" placeholder="Message"></textarea>
 			<button class="send" type="submit">Send your message</button>
