--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 					</ul>
 				</div>
 			</li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Solutions</a></li>
-			<li><a href="#">Services</a></li>
-			<li><a href="#">Testimonial</a></li>
-			<li><a href="#">Gallery</a></li>
-			<li><a href="#">Contacts</a></li>
+			<li><a href="#about">About</a></li>
+			<li><a href="#solutions">Solutions</a></li>
+			<li><a href="#services">Services</a></li>
+			<li><a href="#testimonial">Testimonial</a></li>
+			<li><a href="#gallery">Gallery</a></li>
+			<li><a href="#contacts">Contacts</a></li>
 		</ul>
 	</nav>
 
@@ -103,7 +103,7 @@
 		<a class="click-button" href="#">Click Here</a>
 	</div>
 </section>
-<section class="expectetion">
+<section id="about" class="expectetion">
 	<div class="container">
 		<h3 class="main-label">What You Can <b>Expect</b></h3>
 
@@ -113,7 +113,7 @@
 
 		<div class="ba-grid">
 			<div class="ba-width-medium-1-4 ba-width-small-1-2">
-				<a href="#"><img src="img/volupt.jpg" alt="volupt" width="100%"/></a>
+				<a href="#"><img class="rock-thumbnail" src="img/volupt.jpg" alt="volupt"/></a>
 				<a class="title" href="#">Volupt</a>
 
 				<p class="sub-caption">Sed ut perspiciatis</p>
@@ -122,7 +122,7 @@
 					laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
 				<a class="more-button" href="#">Learn more</a></div>
 			<div class="ba-width-medium-1-4 ba-width-small-1-2">
-				<a href="#"><img src="img/santium.jpg" alt="santium" width="100%"/></a>
+				<a href="#"><img class="rock-thumbnail" src="img/santium.jpg" alt="santium"/></a>
 				<a class="title" href="#">Santium</a>
 
 				<p class="sub-caption">Omnis iste natus</p>
@@ -131,7 +131,7 @@
 					laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
 				<a class="more-button" href="#">Learn more</a></div>
 			<div class="ba-width-medium-1-4 ba-width-small-1-2">
-				<a href="#"><img src="img/laudanti.jpg" alt="laudanti" width="100%"/></a>
+				<a href="#"><img class="rock-thumbnail" src="img/laudanti.jpg" alt="laudanti"/></a>
 				<a class="title" href="#">Laudanti</a>
 
 				<p class="sub-caption">Voluptatem accusant</p>
@@ -140,7 +140,7 @@
 					laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
 				<a class="more-button" href="#">Learn more</a></div>
 			<div class="ba-width-medium-1-4 ba-width-small-1-2">
-				<a href="#"><img src="img/aperiam.jpg" alt="aperiam" width="100%"/></a>
+				<a href="#"><img class="rock-thumbnail" src="img/aperiam.jpg" alt="aperiam"/></a>
 				<a class="title" href="#">Aperiam</a>
 
 				<p class="sub-caption">Inventore veritatis et</p>
@@ -151,7 +151,7 @@
 		</div>
 	</div>
 </section>
-<section class="video">
+<section id="solutions" class="video">
 	<div class="container">
 		<h3 class="main-label">We accept any<br/><b>creative task</b></h3>
 
@@ -186,7 +186,7 @@
 		</div>
 	</div>
 </section>
-<section class="offer">
+<section id="services" class="offer">
 	<div class="container">
 		<h3 class="main-label">Take a look<br/>at the services <b>we offer</b></h3>
 
@@ -229,7 +229,7 @@
 		</div>
 	</div>
 </section>
-<section class="customers">
+<section id="testimonial" class="customers">
 	<div class="container">
 		<h3 class="main-label">What our <b>customers</b> say</h3>
 
@@ -287,7 +287,7 @@
 		<a class="next-reply" href="#"><i class="fa fa-angle-right"></i></a>
 	</div>
 </section>
-<section class="gallery">
+<section id="gallery" class="gallery">
 	<div class="container">
 		<h3 class="main-label">Latest works <b>gallery</b></h3>
 
@@ -300,31 +300,31 @@
 					 data-cycle-pager=".portfolio-controls">
 					<div class="ba-grid">
 						<div class="ba-width-1-3">
-							<a class="work" href="#"><img src="img/sink.jpg" alt="sink" width="100%"/></a>
-							<a class="work" href="#"><img src="img/stones.jpg" alt="stones" width="100%"/></a>
+							<a class="work" href="#"><img src="img/sink.jpg" alt="sink"/></a>
+							<a class="work" href="#"><img src="img/stones.jpg" alt="stones"/></a>
 						</div>
 						<div class="ba-width-1-3">
-							<a class="work" href="#"><img src="img/bathroom.jpg" alt="bathroom" width="100%"/></a>
-							<a class="work" href="#"><img src="img/toilet.jpg" alt="toilet" width="100%"/></a>
+							<a class="work" href="#"><img src="img/bathroom.jpg" alt="bathroom"/></a>
+							<a class="work" href="#"><img src="img/toilet.jpg" alt="toilet"/></a>
 						</div>
 						<div class="ba-width-1-3">
-							<a class="work" href="#"><img src="img/bricks.jpg" alt="bricks" width="100%"/></a>
-							<a class="work" href="#"><img src="img/square-bricks.jpg" alt="square-bricks" width="100%"/></a>
+							<a class="work" href="#"><img src="img/bricks.jpg" alt="bricks"/></a>
+							<a class="work" href="#"><img src="img/square-bricks.jpg" alt="square-bricks"/></a>
 						</div>
 					</div>
 					<div class="ba-grid">
 
 						<div class="ba-width-1-3">
-							<a class="work" href="#"><img src="img/bathroom.jpg" alt="bathroom" width="100%"/></a>
-							<a class="work" href="#"><img src="img/toilet.jpg" alt="toilet" width="100%"/></a>
+							<a class="work" href="#"><img src="img/bathroom.jpg" alt="bathroom"/></a>
+							<a class="work" href="#"><img src="img/toilet.jpg" alt="toilet"/></a>
 						</div>
 						<div class="ba-width-1-3">
-							<a class="work" href="#"><img src="img/sink.jpg" alt="sink" width="100%"/></a>
-							<a class="work" href="#"><img src="img/stones.jpg" alt="stones" width="100%"/></a>
+							<a class="work" href="#"><img src="img/sink.jpg" alt="sink"/></a>
+							<a class="work" href="#"><img src="img/stones.jpg" alt="stones"/></a>
 						</div>
 						<div class="ba-width-1-3">
-							<a class="work" href="#"><img src="img/bricks.jpg" alt="bricks" width="100%"/></a>
-							<a class="work" href="#"><img src="img/square-bricks.jpg" alt="square-bricks" width="100%"/></a>
+							<a class="work" href="#"><img src="img/bricks.jpg" alt="bricks"/></a>
+							<a class="work" href="#"><img src="img/square-bricks.jpg" alt="square-bricks"/></a>
 						</div>
 					</div>
 				</div>
@@ -477,7 +477,7 @@
 		<p class="phone ba-vertical-align-middle">call now +1 959 603 6035</p>
 	</div>
 </section>
-<section class="contact-us">
+<section id="contacts" class="contact-us">
 	<div class="container">
 		<h3 class="main-label">Feel free to <b>contact us</b></h3>
 
@@ -505,8 +505,7 @@
 			class="red-word">Monster</span>.com</a> © 2015</p>
 </section>
 <section class="map">
-	<iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zwVc-MfqXC48.kYYk6PxYquec" width="100%"
-			height="500"></iframe>
+	<iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zwVc-MfqXC48.kYYk6PxYquec"	height="500"></iframe>
 </section>
 </body>
 </html>
